# cub3d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.cub  config_strong.cub  config_strong1.cub
configs/: config.cub  config_bonus.cub  config_bonus_star.cub  config_strong.cub  config_strong1.cub
imgs/: armor.xpm  bones.xpm  buffrog.xpm  buffrog_beaten.xpm  chandelier.xpm  chandelier_skull.xpm  die.xcf  die.xpm  door_ludo.xpm  door_mewni.xpm  empty.xpm  forelock.xpm  fountain.xpm  grid.xpm  grid1024.xpm  hp.xpm  king_river.xpm  ludo.xpm  ludo_beaten.xpm  mewni_sky_ea.xpm  mewni_sky_no.xpm  mewni_sky_so.xpm  mewni_sky_to.xpm  mewni_sky_we.xpm  mewni_wall_3.xpm  micro.xpm  morty_smith.xpm  painting.xpm  pinc_wall.xpm  plant_wall.xpm  ponyhead.xpm  portal_ludo.xpm  portal_rick.xpm  procenko.xpm  queen_moon.xpm  rainbow1.xpm  rainbow_blast.xpm  rainbow_blast1.xpm  rainbow_blast2.xpm  rainbow_blast3.xpm  (+23 more)
srcs/: cub3d.c  cub3d.h  errors.h  main.c  test.c
srcs/config_parse/: config_parse.c  map_validation.c  map_validation_surround.c  parse_map.c  parse_utils.c
srcs/cub_init/: cub_destroy.c  cub_destroy_2.c  cub_init.c  cub_init_struct.c  cube_start.c  player_init.c
srcs/game/: cells.c  image_form.c  key_process.c  key_process_game.c  key_process_loop.c  ray_thorw.c  ray_throw.c  ray_throw_sprites.c  textures.c  textures_sprites.c
srcs/imgs/: Johny2.xpm  SPRITE.xpm  jhony.xml  white.xpm
srcs/window_work/: bmp.c  window_setup.c
srcs_bonus/: cub3d_bonus.c  cub3d_bonus.h  errors_bonus.h
srcs_bonus/config_parse/: config_parse.c  config_parse.h  config_parse_bonus.c  config_parse_bonus.h  config_parse_line_type.c  config_parse_line_type_2.c  config_parse_line_type_2_bonus.c  config_parse_line_type_bonus.c  config_parse_lines.c  config_parse_lines_bonus.c  map_validation.c  map_validation_bonus.c  map_validation_surround.c  map_validation_surround_bonus.c  parse_line_err_msg.c  parse_line_err_msg_2.c  parse_line_err_msg_2_bonus.c  parse_line_err_msg_bonus.c  parse_line_texture_ret.c  parse_line_texture_ret_2.c  parse_line_texture_ret_2_bonus.c  parse_line_texture_ret_bonus.c  parse_map.c  parse_map_bonus.c  parse_utils.c  parse_utils_bonus.c
srcs_bonus/cub_init/: cub_destroy.c  cub_destroy_2.c  cub_destroy_bonus.c  cub_destroy_tex.c  cub_destroy_tex_2.c  cub_destroy_tex_2_bonus.c  cub_destroy_tex_bonus.c  cub_init.c  cub_init.h  cub_init_bonus.c  cub_init_struct.c  cub_init_struct_2.c  cub_init_struct_2_bonus.c  cub_init_struct_bonus.c  cub_init_struct_tx_animation.c  cub_init_struct_tx_animation_bonus.c  cub_init_struct_tx_doors.c  cub_init_struct_tx_doors_bonus.c  cub_init_struct_tx_floors_scrns.c  cub_init_struct_tx_floors_scrns_bonus.c  cub_init_struct_tx_skybox.c  cub_init_struct_tx_skybox_bonus.c  cub_init_struct_tx_spr_go.c  cub_init_struct_tx_spr_go_bonus.c  cub_init_struct_tx_spr_ngo.c  cub_init_struct_tx_spr_ngo_bonus.c  cub_init_struct_tx_walls.c  cub_init_struct_tx_walls_bonus.c  player_init.c  player_init_bonus.c
srcs_bonus/game/: cells.c  cells_2.c  cells_2_bonus.c  cells_bonus.c  cub_game.h  cub_game_bonus.h  get_length_ceil_floor.c  get_length_ceil_floor_bonus.c  hud.c  image_form.c  image_form_bonus.c  interactions.c  key_process_game.c  key_process_game_bonus.c  key_process_loop.c  key_process_loop_bonus.c  mouse_process_loop.c  mouse_process_loop_bonus.c  ray_throw.c  ray_throw_2.c  ray_throw_2_bonus.c  ray_throw_bonus.c  ray_throw_sprites.c  ray_throw_sprites_bonus.c  select_textures.c  shadows.c  show_screen.c  skybox.c  textures.c  textures_sprites.c  walls.c
srcs_bonus/game_interactions/: cub_hud.h  cub_hud_bonus.h  hud.c  hud_bonus.c  hud_hp.c  hud_hp_bonus.c  hud_shooting.c  hud_shooting_bonus.c  interactions.c  interactions_bonus.c  interactions_portals.c  interactions_portals_bonus.c
srcs_bonus/game_textures/: cub_textures.h  cub_textures_bonus.h  get_frame_col_pixel.c  get_frame_col_pixel_bonus.c  get_textures_pixel.c  get_textures_pixel_bonus.c  select_textures.c  select_textures_bonus.c  shadows.c  shadows_bonus.c  show_screen.c  show_screen_bonus.c  skybox.c  skybox_bonus.c  textures_sprites.c  textures_sprites_bonus.c  window_blocks.c  window_blocks_bonus.c
srcs_bonus/includes/: bmp_bonus.h  cub_game_bonus.h  cub_hud_bonus.h  cub_init_bonus.h
srcs_bonus/window_work/: bmp.c  bmp.h  bmp_bonus.c  window_setup.c  window_setup_bonus.c
